syntax = "proto3";

package cline;

import "common.proto";

// Service for file-related operations
service FileService {
  // Opens a file in the editor
  rpc openFile(StringRequest) returns (Empty);

  // Deletes a rule file from either global or workspace rules directory
  rpc deleteRuleFile(DeleteRuleFileRequest) returns (DeleteRuleFileResponse);
}

// Request for deleting a rule file
message DeleteRuleFileRequest {
  Metadata metadata = 1;
  string rule_path = 2;  // Path of the rule file to delete
  bool is_global = 3;    // Whether the file is in global or workspace rules directory
}

// Response for deleting a rule file
message DeleteRuleFileResponse {
  bool success = 1;     // Whether the deletion was successful
  string message = 2;   // Success or error message
}
